# MAC-SHARP

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile_debug  README.md
config/: config.yaml  datasetScenes.yaml
datasets/: config.yaml
include/: CommonTypes.hpp  MAC_SHARP.hpp  MAC_utils.hpp  MacConfig.hpp  MacData.hpp  MacEvaluator.hpp  MacGraph.hpp  MacMonitor.hpp  MacRtHypothesis.hpp  MacSharp.hpp  MacTimer.hpp  MacUtils.hpp  config_loader.hpp  temp  utils.hpp
scripts/: corr_heat_map.py  corr_heat_map_original.py
src/: MAC_SHARP.cpp  MAC_main.cpp  MAC_utils.cpp  MacData.cpp  MacEvaluator.cpp  MacGraph.cpp  MacMain.cpp  MacMonitor.cpp  MacRtHypothesis.cpp  MacSharp.cpp  MacUtils.cpp  deprecated.cpp  test
test/: graph_construction_test.cpp  temp_test.cpp  test.cpp
test_data/: GTmat.txt  corr.txt  corr_ind.txt  label.txt
test_data/output/: status.txt
test_link/: CMakeLists.txt  test_main.cpp
